--- a/index.html
+++ b/index.html
@@ -62,63 +62,63 @@
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Form Validate</div>
         <div class="card-body">
-          <img src="./imgs/01-form-validate.JPG" alt="" class="w-100">
+          <img src="./imgs/01-form-validate.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./01-Form Validate/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Movie Booking</div>
         <div class="card-body">
-          <img src="./imgs/02-movie-booking.JPG" alt="" class="w-100">
+          <img src="./imgs/02-movie-booking.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./02-Movie Booking/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Currency Exchange</div>
         <div class="card-body">
-          <img src="./imgs/04-currency-exchange.JPG" alt="" class="w-100">
+          <img src="./imgs/04-currency-exchange.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./04-Curency Exchange/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">DOM Array Method</div>
         <div class="card-body">
-          <img src="./imgs/05-dom-array-method.JPG" alt="" class="w-100">
+          <img src="./imgs/05-dom-array-method.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./05-DOM Array Method/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Menu Slider and Modal</div>
         <div class="card-body">
-          <img src="./imgs/06-menu-slider-modal.JPG" alt="" class="w-100">
+          <img src="./imgs/06-menu-slider-modal.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./06-Menu Slider- Modal/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Hangman Game</div>
         <div class="card-body">
-          <img src="./imgs/07-hangman-game.JPG" alt="" class="w-100">
+          <img src="./imgs/07-hangman-game.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./07-Hangman Game/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Meal Finder</div>
         <div class="card-body">
-          <img src="./imgs/08-meal-finder.JPG" alt="" class="w-100">
+          <img src="./imgs/08-meal-finder.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./08-Meal Finder/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Expense Tracker</div>
         <div class="card-body">
-          <img src="./imgs/09-expense-tracker.JPG" alt="" class="w-100">
+          <img src="./imgs/09-expense-tracker.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./09-Expanse Tracker/index.html">View More</a>
         </div>
       </div>
       <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header bg-info">Music Player</div>
         <div class="card-body">
-          <img src="./imgs/10-music-player.JPG" alt="" class="w-100">
+          <img src="./imgs/10-music-player.jpg" alt="" class="w-100">
           <a class="btn btn-success" href="./10-Music Player/index.html">View More</a>
         </div>
       </div>
