--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
           <a class="btn btn-success" href="./10-Music Player/index.html">View More</a>
         </div>
       </div>
+      <div class="card border-primary mb-3" style="max-width: 20rem;">
+        <div class="card-header bg-info">Infinity Scroll Post</div>
+        <div class="card-body">
+          <img src="./imgs/11-infinity-scroll-post.jpg" alt="" class="w-100">
+          <a class="btn btn-success" href="./11-Infinity-Scroll-Post/index.html">View More</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
