--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
           <a class="btn btn-success" href="./11-Infinity-Scroll-Post/index.html">View More</a>
         </div>
       </div>
+      <div class="card border-primary mb-3" style="max-width: 20rem;">
+        <div class="card-header bg-info">Speed Typing Game</div>
+        <div class="card-body">
+          <img src="./imgs/12-speed-typing-game.jpg" alt="" class="w-100">
+          <a class="btn btn-success" href="./12-Typing-Game/index.html">View More</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
