--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
           <a class="btn btn-success" href="./12-Typing-Game/index.html">View More</a>
         </div>
       </div>
+      <div class="card border-primary mb-3" style="max-width: 20rem;">
+        <div class="card-header bg-info">Speech Text Reader</div>
+        <div class="card-body">
+          <img src="./imgs/13-speech-text-reader.jpg" alt="" class="w-100">
+          <a class="btn btn-success" href="./13-Speech-Text-Reader/index.html">View More</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
