--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
           <a class="btn btn-success" href="./13-Speech-Text-Reader/index.html">View More</a>
         </div>
       </div>
+      <div class="card border-primary mb-3" style="max-width: 20rem;">
+        <div class="card-header bg-info">Flash Card</div>
+        <div class="card-body">
+          <img src="./imgs/14-flash-card.jpg" alt="" class="w-100">
+          <a class="btn btn-success" href="./14-Flash-Card/index.html">View More</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
