--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
           <a class="btn btn-success" href="./14-Flash-Card/index.html">View More</a>
         </div>
       </div>
+      <div class="card border-primary mb-3" style="max-width: 20rem;">
+        <div class="card-header bg-info">Meditation App</div>
+        <div class="card-body">
+          <img src="./imgs/16-Meditation-app.jpg" alt="" class="w-100">
+          <a class="btn btn-success" href="./16-Meditaiton-App/index.html">View More</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
